[gd_scene load_steps=4 format=3 uid="uid://q76rj2gcppr6"]

[ext_resource type="Script" path="res://zzzzzzzzztesting.gd" id="1_ch4nx"]
[ext_resource type="Texture2D" uid="uid://b6wcdkeehighk" path="res://icons/save.tres" id="2_4tuk2"]
[ext_resource type="Texture2D" uid="uid://ce0i6bjaaxnci" path="res://icons/load.tres" id="3_43suh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ch4nx")

[node name="save" type="Button" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 45.0
offset_right = 204.0
offset_bottom = 109.0
text = "save :3 "
icon = ExtResource("2_4tuk2")
expand_icon = true

[node name="load" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 136.0
offset_right = 198.0
offset_bottom = 200.0
text = ":3 load"
icon = ExtResource("3_43suh")
icon_alignment = 2
expand_icon = true

[node name="label" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 398.0
offset_right = 183.0
offset_bottom = 592.0
text = "Status Messages Will Go Here!"
autowrap_mode = 3

[node name="children" type="Control" parent="."]
anchors_preset = 0
offset_left = 220.0
offset_top = 43.0
offset_right = 1067.0
offset_bottom = 622.0

[node name="SaveDialoge" type="FileDialog" parent="."]
title = "Save Project"
ok_button_text = "Save"
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.meow", "*.zip")
use_native_dialog = true

[node name="OpenDialoge" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open Project"
size = Vector2i(207, 175)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.meow", "*.zip")
use_native_dialog = true

[connection signal="pressed" from="save" to="." method="save_pressed"]
[connection signal="pressed" from="load" to="." method="load_pressed"]
[connection signal="file_selected" from="SaveDialoge" to="." method="_save_file_selected"]
[connection signal="file_selected" from="OpenDialoge" to="." method="_load_file_selected"]
